Research AV api more

--- a/notebooks/prices.ipynb
+++ b/notebooks/prices.ipynb
@@ -2980,6 +2980,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AV_BASE_URL = \"https://alphavantageapi.co\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'meta_data': {'symbols': 'NVDA,MSFT',\n",
+       "  'min_dt': '2024-05-01',\n",
+       "  'max_dt': '2024-05-28',\n",
+       "  'ohlc': 'Close',\n",
+       "  'interval': 'DAILY'},\n",
+       " 'payload': {'RETURNS_CALCULATIONS': {'MEAN': {'NVDA': 0.018122812057079735,\n",
+       "    'MSFT': 0.004912725757830028},\n",
+       "   'STDDEV': {'NVDA': 0.02921723108814557, 'MSFT': 0.008518494503650423},\n",
+       "   'CUMULATIVE_RETURN': {'NVDA': 0.3716236557844921,\n",
+       "    'MSFT': 0.09151474768854295}}}}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analytics_url = f'{AV_BASE_URL}/timeseries/analytics?SYMBOLS=NVDA,MSFT&RANGE=2024-05-01&RANGE=2024-06-01&INTERVAL=DAILY&OHLC=close&CALCULATIONS=MEAN,STDDEV,CUMULATIVE_RETURN&apikey={ALPHA_VANTAGE_API_KEY}'\n",
+    "analytics_data = requests.get(analytics_url)\n",
+    "analytics_json = analytics_data.json()\n",
+    "analytics_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'meta_data': {'symbols': 'MSFT,NVDA',\n",
+       "  'window_size': 10,\n",
+       "  'min_dt': '2024-04-29',\n",
+       "  'max_dt': '2024-05-28',\n",
+       "  'ohlc': 'Close',\n",
+       "  'interval': 'DAILY'},\n",
+       " 'payload': {'RETURNS_CALCULATIONS': {'MEAN': {'RUNNING_MEAN': {'MSFT': {'2024-05-13': 0.0029241899987912713,\n",
+       "      '2024-05-14': 0.006822577483335535,\n",
+       "      '2024-05-15': 0.007126887272188453,\n",
+       "      '2024-05-16': 0.005898602112167672,\n",
+       "      '2024-05-17': 0.0034963529052373875,\n",
+       "      '2024-05-20': 0.0030253400539616117,\n",
+       "      '2024-05-21': 0.0049108535970458275,\n",
+       "      '2024-05-22': 0.004962654943675859,\n",
+       "      '2024-05-23': 0.00371146374625001,\n",
+       "      '2024-05-24': 0.0038645878062329884,\n",
+       "      '2024-05-28': 0.004147720482062645},\n",
+       "     'NVDA': {'2024-05-13': 0.0032806418616855293,\n",
+       "      '2024-05-14': 0.005883318264056203,\n",
+       "      '2024-05-15': 0.01335705664213227,\n",
+       "      '2024-05-16': 0.009727751127364593,\n",
+       "      '2024-05-17': 0.004272177079064266,\n",
+       "      '2024-05-20': 0.0029861933569045097,\n",
+       "      '2024-05-21': 0.0053468624360826665,\n",
+       "      '2024-05-22': 0.005046584806731291,\n",
+       "      '2024-05-23': 0.016207796426666345,\n",
+       "      '2024-05-24': 0.01750566626722898,\n",
+       "      '2024-05-28': 0.023906427216878478}},\n",
+       "    'window_start': {'2024-05-13': '2024-04-29',\n",
+       "     '2024-05-14': '2024-04-30',\n",
+       "     '2024-05-15': '2024-05-01',\n",
+       "     '2024-05-16': '2024-05-02',\n",
+       "     '2024-05-17': '2024-05-03',\n",
+       "     '2024-05-20': '2024-05-06',\n",
+       "     '2024-05-21': '2024-05-07',\n",
+       "     '2024-05-22': '2024-05-08',\n",
+       "     '2024-05-23': '2024-05-09',\n",
+       "     '2024-05-24': '2024-05-10',\n",
+       "     '2024-05-28': '2024-05-13'}}}}}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analytics_sliding_url = f'{AV_BASE_URL}/timeseries/running_analytics?SYMBOLS=NVDA,MSFT&RANGE=1month&INTERVAL=DAILY&WINDOW_SIZE=10&OHLC=close&CALCULATIONS=MEAN&apikey={ALPHA_VANTAGE_API_KEY}'\n",
+    "analytics_sliding_data = requests.get(analytics_sliding_url)\n",
+    "analytics_sliding_json = analytics_sliding_data.json()\n",
+    "analytics_sliding_json"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
