--- a/notebooks/news_av.ipynb
+++ b/notebooks/news_av.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install git+https://github.com/RomelTorres/alpha_vantage@2122903650d608c612bd9ddabd683f598956222f"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
