--- a/notebooks/prices_av.ipynb
+++ b/notebooks/prices_av.ipynb
@@ -2,6 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/RomelTorres/alpha_vantage@2122903650d608c612bd9ddabd683f598956222f\n",
+      "  Cloning https://github.com/RomelTorres/alpha_vantage (to revision 2122903650d608c612bd9ddabd683f598956222f) to c:\\users\\owner\\appdata\\local\\temp\\pip-req-build-988_0s9f\n",
+      "  Resolved https://github.com/RomelTorres/alpha_vantage to commit 2122903650d608c612bd9ddabd683f598956222f\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Requirement already satisfied: aiohttp in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from alpha_vantage==2.3.1) (3.9.5)\n",
+      "Requirement already satisfied: requests in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from alpha_vantage==2.3.1) (2.32.2)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from aiohttp->alpha_vantage==2.3.1) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from aiohttp->alpha_vantage==2.3.1) (23.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from aiohttp->alpha_vantage==2.3.1) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from aiohttp->alpha_vantage==2.3.1) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from aiohttp->alpha_vantage==2.3.1) (1.9.4)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from requests->alpha_vantage==2.3.1) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from requests->alpha_vantage==2.3.1) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from requests->alpha_vantage==2.3.1) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\owner\\documents\\stonksbot\\venv\\lib\\site-packages (from requests->alpha_vantage==2.3.1) (2024.2.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/RomelTorres/alpha_vantage 'C:\\Users\\Owner\\AppData\\Local\\Temp\\pip-req-build-988_0s9f'\n",
+      "  Running command git rev-parse -q --verify 'sha^2122903650d608c612bd9ddabd683f598956222f'\n",
+      "  Running command git fetch -q https://github.com/RomelTorres/alpha_vantage 2122903650d608c612bd9ddabd683f598956222f\n",
+      "  Running command git checkout -q 2122903650d608c612bd9ddabd683f598956222f\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install git+https://github.com/RomelTorres/alpha_vantage@2122903650d608c612bd9ddabd683f598956222f"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
