Fix opening minute bug

--- a/options/notebooks/experimento.ipynb
+++ b/options/notebooks/experimento.ipynb
@@ -19783,8 +19783,7 @@
     "            wingspan_ratio=wingspan_ratio\n",
     "        )\n",
     "        df_day = fetch_full_day_options_data(day, longs, shorts)\n",
-    "        df_day_remaining = df_day.iloc[position_opening_minute_idx:]\n",
-    "        values = positions_value_during_day(longs, shorts, df_day_remaining)\n",
+    "        values = positions_value_during_day(longs, shorts, df_day)\n",
     "        closing_value = closing_strategy(values)\n",
     "        money += closing_value * n_contracts\n",
     "        results.append(money)\n",
