--- a/options/backtest_analysis.ipynb
+++ b/options/backtest_analysis.ipynb
@@ -647,6 +647,8 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
+    "# win rates\n",
+    "\n",
     "sns.heatmap(profit_loss_matrix, annot=True, fmt=\".1%\", cmap=\"YlGnBu\")"
    ]
   }
